# UBoat

./: .clang-format  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL.md  LICENSE  Makefile  README.md
Hishiro-San/: Hishiro-San.sln
Hishiro-San/Hishiro-San/: Hishiro-San.csproj  Kaizaki.cs  Program.cs
Hishiro-San/Hishiro-San/Properties/: AssemblyInfo.cs
boat/: AggressiveOptimize.h  Command.cpp  Commands.cpp  Commands.h  Commands.hpp  Config.h  Config.h.in  DownloadExecute.cpp  DownloadExecute.h  Flood.cpp  Flood.h  Gate.h  GateHelper.cpp  GateHelper.h  HttpQuery.cpp  HttpQuery.h  Keylogger.cpp  Keylogger.h  MessageBox.hpp  OSCpuChecker.cpp  OSCpuChecker.h  OSGetRam.cpp  OSGetRam.h  OSGpuChecker.cpp  OSGpuChecker.h  OSHwidChecker.cpp  OSHwidChecker.h  OSNetVersionChecker.cpp  OSNetVersionChecker.h  OSVersionChecker.cpp  OSVersionChecker.h  PEIsAdmin.cpp  PeIsAdmin.h  Processes.cpp  Processes.h  Processes.hpp  Screenshot.cpp  Screenshot.h  SocketInit.cpp  SocketInit.h  (+21 more)
os/linux/: MessageBox.cpp  OSHwidChecker.cpp
os/osx/: OSHwidChecker.cpp  Processes.cpp
os/win32/: MessageBox.cpp  OSHwidChecker.cpp  Processes.cpp
